cabal-version:      2.4
name:               web-kana-backend
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:
license:            NONE
author:             kubni
maintainer:         nikola.kuburovic123@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable web-kana-backend
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules:
        Routes,
        Controllers,
        Models,
        KanaTables,
        RandomGenerators

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.17.2.0,
        containers,
        text,
        random,
        warp,
        twain,
        HDBC,
        HDBC-odbc
    hs-source-dirs:   app
    default-language: Haskell2010
